--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@
 *.tar.gz
 *.rar
 *.iml
+.idea/
+*.bat
+.build/
+gradlew
+.gradle/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
