--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 .build/
 gradlew
 .gradle/
+library/build/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
